--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   flutter_redux: ^0.5.3
   dio: ^2.1.13
   json_annotation: ^3.0.0
+  shared_preferences: ^0.5.3+4
 
 dev_dependencies:
   flutter_test:
