--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   dio: ^2.1.13
   json_annotation: ^3.0.0
   shared_preferences: ^0.5.3+4
+  fluttertoast: ^3.1.0
 
 dev_dependencies:
   flutter_test:
